--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
     body {
         background-color:rgb(104, 255, 187);
+        text-align: center;
+        color: white;
     }
     h2 {
         font-family: 'Lilita One', serif;
         text-align: center;
+        color: white;
     }
     .smallerImg {
         width: 150px;
@@ -11,3 +14,33 @@
     p {
         font-family: 'Comic Sans MS', serif;
     }
+    ul {
+        padding: 10px;
+        display: inline;
+        font-size: 20px
+    }
+    li {
+        display: inline;
+        padding: 0px 100px 0px 100px;
+        font-family: 'Boldonse', serif;
+        color: white;
+    }
+    header {
+        text-align: center;
+        background: url('images/headerBackground.jpg');
+        padding:20px 0px 0px 0px;
+        background-size: 750px;
+        background-position: center;
+      }
+      h1 {
+        font-size: 35px;
+        font-family: 'Lilita One', serif;
+      }
+      img {
+        margin: 40px 0px 0px 0px;
+        border: 7px solid white;
+        border-radius: 20px;
+      }
+      a {
+        color: white;
+      }
