--- a/styles.css
+++ b/styles.css
@@ -42,5 +42,5 @@
         border-radius: 20px;
       }
       a {
-        font-family: 'Boldonse', serif;
+        font-family: 'Lilita One', serif;
       }
