--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@
       h1 {
         font-size: 35px;
         font-family: 'Lilita One', serif;
+        text-align: center;
       }
       img {
         margin: 40px 0px 0px 0px;
