--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,5 @@
         margin: 40px 0px 0px 0px;
         border: 7px solid white;
         border-radius: 20px;
+        text-align: center;
       }
