--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     }
     p {
         font-family: 'Comic Sans MS', serif;
+        text-align: center;
     }
     ul {
         padding: 10px;
